# flywheel

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  ANALYSIS_ISSUE_114.md  CANDIDATE_2_ANALYSIS.md  ISSUE_436_ANALYSIS.md  ISSUE_789_ANALYSIS.md  ISSUE_910_ANALYSIS.md  README.md  coverage.xml  pyproject.toml  run_test_1181.py  simple_test.py  test_1185_event_loop_leak.py  test_1249_fix.py  test_1406_quick.py  test_764_demo.py  test_794_simple.py  test_backslash.py  test_bug_1381.py  test_current_behavior.py  test_fix.py  test_fix_1190.py  test_fix_verification.py  test_issue_1139.py  test_issue_1573.py  test_issue_1627.py  test_issue_360.py  test_shlex_behavior.py  test_simple.py  test_verification_1809.py  validate_issue_322.py  verify_1169.py  verify_1181.py  verify_1554.py  verify_issue789.py  verify_issue_1019.py  verify_issue_1434.py  verify_issue_1594.py  (+4 more)
.flywheel/: plan.md
.github/: FLYWHEEL.md  dependabot.yml
docs/: arch.md  claude-api.md  claude-code-action-research.md  file_lock_implementation.md  prd.md  runbook.md  workflow.md
scripts/: analyze_metrics.py  check_docs_sync.py  ci_failure_fix.py  curate.py  docs_autofix.py  evaluate.py  fix.py  fix_claude_p.py  fix_simple.py  merge.py  scan.py
tests/: test_aiofiles_fallback.py  test_async_compatible_lock_mutual_exclusion.py  test_async_lock_issue1107.py  test_async_lock_threadsafe_release_issue_1176.py  test_async_storage.py  test_atomic_save.py  test_atomic_write.py  test_auto_save.py  test_automation_smoke.py  test_backslash_injection.py  test_backup_rotation.py  test_cache_feature.py  test_cache_initialization.py  test_checksum.py  test_close_issue_688.py  test_compression.py  test_concurrency_documentation.py  test_concurrent_id_uniqueness.py  test_concurrent_race_condition.py  test_dirty_cache.py  test_dirty_threshold.py  test_efficient_id_generation.py  test_excluded_fields_issue_1774.py  test_exponential_backoff.py  test_extract_context_self.py  test_fcntl_import_error.py  test_fd_leak.py  test_file_descriptor.py  test_file_lock.py  test_file_lock_timeout.py  test_file_permissions.py  test_formatter_control_char_sanitization.py  test_fuzzy_lock_timeout.py  test_homograph_prevention.py  test_import_order_1639.py  test_invalid_json_format.py  test_io_timeout.py  test_iometrics_async_context_manager_issue_1063.py  test_iometrics_async_lock.py  test_iometrics_lock_consistency.py  (+1575 more)
(+1928 files in other folders)
